--- a/digi_darkblue/theme/stylesheet.css
+++ b/digi_darkblue/theme/stylesheet.css
@@ -4659,22 +4659,21 @@ dl.details dd {
 
 .jumpbox-cat-link {
   background-color: #333e4f;
-  border-top-color: #0076B1;
   color: #000; }
 
 .jumpbox-cat-link:hover {
-  background-color: #12A3EB;
-  border-top-color: #12A3EB;
+  background-color: #c35824;
+  border-top-color: #c35824;
   color: #000; }
 
 .jumpbox-forum-link {
-  background-color: #E1EBF2; }
+  background-color: #25282c; }
 
 .jumpbox-forum-link:hover {
-  background-color: #F6F4D0; }
+  background-color: #1d2127; }
 
 .jumpbox .dropdown .pointer-inner {
-  border-color: #E1EBF2 transparent; }
+  border-color: #25282c transparent; }
 
 .jumpbox-sub-link {
   background-color: #25282c; }
