--- a/digi_darkblue2/theme/stylesheet.css
+++ b/digi_darkblue2/theme/stylesheet.css
@@ -4659,22 +4659,21 @@ dl.details dd {
 
 .jumpbox-cat-link {
   background-color: #424554;
-  border-top-color: #0076B1;
   color: #000; }
 
 .jumpbox-cat-link:hover {
-  background-color: #12A3EB;
-  border-top-color: #12A3EB;
+  background-color: #c32425;
+  border-top-color: #c32425;
   color: #000; }
 
 .jumpbox-forum-link {
-  background-color: #E1EBF2; }
+  background-color: #2d2e32; }
 
 .jumpbox-forum-link:hover {
-  background-color: #F6F4D0; }
+  background-color: #25262b; }
 
 .jumpbox .dropdown .pointer-inner {
-  border-color: #E1EBF2 transparent; }
+  border-color: #2d2e32 transparent; }
 
 .jumpbox-sub-link {
   background-color: #2d2e32; }
